# backend/ent/cliententity/cliententity.go
@@ -9,11 +9,11 @@ const (
 	FieldID = "id"
 	// FieldCLIENTNAME holds the string denoting the client_name field in the database.
 	FieldCLIENTNAME = "client_name"
-	// FieldCLIENTSTATUS holds the string denoting the client_status field in the database.
-	FieldCLIENTSTATUS = "client_status"
 
 	// EdgeBooked holds the string denoting the booked edge name in mutations.
 	EdgeBooked = "booked"
+	// EdgeState holds the string denoting the state edge name in mutations.
+	EdgeState = "state"
 
 	// Table holds the table name of the cliententity in the database.
 	Table = "client_entities"
@@ -24,18 +24,27 @@ const (
 	BookedInverseTable = "bookings"
 	// BookedColumn is the table column denoting the booked relation/edge.
 	BookedColumn = "CLIENT_ID"
+	// StateTable is the table the holds the state relation/edge.
+	StateTable = "client_entities"
+	// StateInverseTable is the table name for the Status entity.
+	// It exists in this package in order to avoid circular dependency with the "status" package.
+	StateInverseTable = "status"
+	// StateColumn is the table column denoting the state relation/edge.
+	StateColumn = "Status_ID"
 )
 
 // Columns holds all SQL columns for cliententity fields.
 var Columns = []string{
 	FieldID,
 	FieldCLIENTNAME,
-	FieldCLIENTSTATUS,
+}
+
+// ForeignKeys holds the SQL foreign-keys that are owned by the ClientEntity type.
+var ForeignKeys = []string{
+	"Status_ID",
 }
 
 var (
 	// CLIENTNAMEValidator is a validator for the "CLIENT_NAME" field. It is called by the builders before save.
 	CLIENTNAMEValidator func(string) error
-	// CLIENTSTATUSValidator is a validator for the "CLIENT_STATUS" field. It is called by the builders before save.
-	CLIENTSTATUSValidator func(string) error
 )
